Modify pom para modificar para correr com o maven
Modify pom para modificar para correr com o maven