@@ -87,6 +87,9 @@
                 <version>3.11.0</version>
                 <configuration>
                     <release>25</release>
+                    <compilerArgs>
+                        <arg>-Xlint:none</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
@@ -105,6 +108,10 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>ltc.events.Main</mainClass>
+                    <options>
+                        <option>--enable-native-access=ALL-UNNAMED</option>
+                        <option>--enable-native-access=javafx.graphics</option>
+                    </options>
                 </configuration>
             </plugin>
 
